_layouts/style.css
/* 
 * Fix the flaticon CSS so icons can stack using font-awesome CSS
 */
[class^="flaticon-"]:before, [class*=" flaticon-"]:before,
[class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
        font-size: 1em !important;
		margin-left: 0px !important;
}

/* 
 * include css/bootstrap.min.css
 */
{% include css/bootstrap.min.css %}

/* 
 * include css/agency.css
 */
{% include css/agency.css %}

/* 
 * _layouts/style.css
 *
 * Overrides some of the Agency theme CSS
 */
body {
	font-family: {{ site.data.template.font.body }};
    line-height: 1.6;
}
.text-muted {
	color: #{{ site.data.template.color.muted }};
}
p {
    font-size: {{ site.data.template.font.p-size }};
    line-height: 175%;
}
p.large {
    font-size: {{ site.data.template.font.large }};
}

a.contact-buttons:hover,
a.contact-buttons:focus,
a.contact-buttons:active,
a.contact-buttons {
    color: #{{ site.data.template.color.light }};;
}

a.contact-buttons {
	color: #{{ site.data.template.color.secondary }};
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}
a.credits {
	color: #{{ site.data.template.color.secondary-dark }};
}
.bg-darkest-gray {
    background-color: #{{ site.data.template.color.bg-darkest-gray }};
}
.btn-primary {
    color: #{{ site.data.template.color.light }};
}
.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    color: #{{ site.data.template.color.light }};
}
.btn-xl {
    font-size: {{ site.data.template.font.large }};
    color: #{{ site.data.template.color.light }};
}
.btn-xl:hover,
.btn-xl:focus,
.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    color: #{{ site.data.template.color.light }};
}

header {  
    text-align: inherit;
	color: #{{ site.data.template.color.header }};
    background-image: none;
    background-color: #{{ site.data.template.color.backgnd }};
    background-position: {{ site.data.template.header.background-position }};
}
header .intro-text {
    text-align: {{site.data.template.header.intro.text.align}};
	padding-top: {{site.data.template.header.intro.text.padding-top}};
    padding-bottom: {{site.data.template.header.intro.text.padding-bottom}};
}
header .intro-text .intro-lead-in {
    font-family: {{ site.data.template.font.body }};
    font-style: normal;
    font-weight: 900;
    /* color: #{{ site.data.template.color.secondary-dark }}; */
    color: #{{ site.data.template.color.light }};
    font-size: {{ site.data.template.header.intro.lead-in.font-size}};
    line-height: {{ site.data.template.header.intro.lead-in.line-height}};
	letter-spacing: 1px;
}
header .intro-text .intro-heading {
	/* was font.primary */
	font-family: {{ site.data.template.font.body }};
    /* color: #{{ site.data.template.color.secondary-dark }}; */
    color: #{{ site.data.template.color.secondary }};
    font-size: {{ site.data.template.header.intro.heading.font-size}};
    line-height: {{ site.data.template.header.intro.heading.line-height}};
	letter-spacing: 1px;
}
header .scroll-but {
    text-align: {{site.data.template.header.scroll-but.text-align}};
	padding-top: {{site.data.template.header.scroll-but.padding-top}};
    padding-bottom: {{site.data.template.header.scroll-but.padding-bottom}};
}

header .f04-text {
    text-align: {{site.data.template.header.intro.text.align-midsize}};
    padding-top: {{site.data.template.header.intro.text.padding-top-mid}};
    padding-bottom: {{site.data.template.header.scroll-but.padding-bottom-desktop}};
    font-size: {{ site.data.template.header.intro.heading.font-size-mid}};
    line-height: {{ site.data.template.header.intro.heading.line-height-mid}};
}

.gridlist{
	width: 100%;
    padding-top: 15px;
    padding-bottom: 15px;
}

h2.section-heading {
    font-size: {{ site.data.template.font.sec-head-size1 }};
    margin-top: 80px;
}

h3.section-subheading {
    /*  font-family: {{ site.data.template.font.body }};  */
    font-style: normal;
    font-size: {{ site.data.template.font.sec-sub-head-size }};
}

h1,
h2,
h3,
h4,
h5,
h6 {
    /* text-transform: uppercase; */
    /* font-family: {{ site.data.template.font.primary }}; */
    font-weight: 500;
}

h4 {
    line-height: 145%;
    letter-spacing: 0.8px;
    font-size: {{ site.data.template.font.h4-head-size1 }};
}


.list-inline>li {
    padding-left: 25px;
    padding-right: 25px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.row {
    margin-left: auto;
    margin-right: auto;
}

.address {
    margin: 0 10px 0;
}

.img-padded {
    padding: 30px 20px;
}

li.social-but-img a {
   /* background-color: #{{ site.data.template.color.light }} !important; */
}

.img-iconimg {
    width:20px \9;
    max-width:100%;
    height:auto
}

ul.list-inline.social-buttons
{
    padding-left: 25px;
    padding-right: 25px;
    padding-top: 40px;
    padding-bottom: 80px;
    
}

ul.social-buttons li a {
    color: #{{ site.data.template.color.secondary}};
    background-color: #{{ site.data.template.color.secondary-dark}};
    /*    display: block; */
    width: 2em;
    height: 2em;
    font-size: 2em;
    line-height: 2em;
    /*
    outline: 0;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
    */
}

.author {
    margin: 40px;
    max-width: {{site.data.template.header.author-max-width}};
    padding: 10px;
    border-radius: 50%;
    border-style: solid;
    border-width: 3px;
}

/* ------------- */
/* media queries */
/* ------------- */

/* Customize header intro text placement and colour.  (Will depend on background image) */
@media(min-width:{{site.data.template.media.midsize}}) {
    .author {
    max-width: {{site.data.template.header.author-max-width-midsize}};
    }
    h4 {
        font-size: {{ site.data.template.font.h4-head-size2 }};
    }
    section h2.section-heading {
        font-size: {{ site.data.template.font.sec-head-size2 }};
    }
    section h2.about-heading {
        font-size: {{ site.data.template.font.sec-head-size2 }};
	}
    header .intro-text {
        text-align: {{site.data.template.header.intro.text.align-midsize}};
        padding-top: {{site.data.template.header.intro.text.padding-top-mid}}
    }
    header .intro-text .intro-lead-in {
        font-size: {{ site.data.template.header.intro.lead-in.font-size-mid}};
        line-height: {{ site.data.template.header.intro.lead-in.line-height-mid}};
    }
    header .intro-text .intro-heading {
        font-size: {{ site.data.template.header.intro.heading.font-size-mid}};
        line-height: {{ site.data.template.header.intro.heading.line-height-mid}};
    }
    .gridlist{
	   width: 33.3%;
       height: 236.5px;
       padding-top: 30px;
       padding-bottom: 30px;
    }
}


@media(min-width:{{site.data.template.media.wide-desktop}}) {
	header .intro-text {
        padding-top: {{site.data.template.header.intro.text.padding-top-wide-desktop}}
    }
	header .intro-text .intro-heading {
        font-size: {{ site.data.template.header.intro.heading.font-size-wide-desktop}};
		line-height: {{ site.data.template.header.intro.heading.line-height-wide-desktop}};
    }
}

{{ content }}

